# HyperRecall

./: .clang-format  .gitignore  ACCEPTANCE_TESTS.md  ACCESS_METHODS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLETION_CERTIFICATE.md  CONTRIBUTING.md  CREATE_RELEASE_NOW.md  FAQ.md  FINAL_SUMMARY.txt  HyperRecall.desktop  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  ONE_CLICK_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_FINALIZATION.md  PROJECT_STRUCTURE.md  QT6_MIGRATION_COMPLETE.md  QT6_ONLY_MIGRATION.md  QT6_QUICK_START.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  ROADMAP.md  SECURITY.md  SUCCESS.txt  SUMMARY.md  TASK_COMPLETION_REPORT.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  WORKFLOW_DIAGRAM.txt  aliases.sh  check-setup.sh  create-release.ps1  (+7 more)
.github/workflows/: build.yml  release.yml
_codeql_build_dir/: Makefile  cmake_install.cmake
assets/: themes.json
assets/fonts/: OFL.txt  README.md
assets/icons/: README.md
installer/: README.md
installer/windows/: installer.nsi
scripts/: setup_env.ps1  setup_env.sh  verify_build.sh
src/: analytics.c  analytics.h  app.c  app.h  cfg.c  cfg.h  db.c  db.h  import_export.c  import_export.h  json.c  json.h  main.c  main_qt.cpp  media.c  media.h  model.c  model.h  platform.c  platform.h  render.c  render.h  sessions.c  sessions.h  srs.c  srs.h  theme.c  theme.h  types.h  ui.c  ui.h
src/qt/: README.md  analytics_screen.cpp  analytics_screen.h  library_screen.cpp  library_screen.h  main_window.cpp  main_window.h  qt_platform.cpp  qt_platform.h  qt_ui.cpp  qt_ui.h  study_screen.cpp  study_screen.h
